[Features] 프로필 이미지 영역선택 방식 개선 (JND-5041) - 잔디 환경에 맞게 크롭 이미지 라이브 러리 수정 - centerInParent 삽입하여 항상 정 중앙에 위치할 수 있도록 옵션을 추가함 - 배경 색상 및 테두리 색상 굵기 변경

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="ultra_dark">#29303F</color>
     <color name="dark">#696E79</color>
     <color name="ultra_dark_overlay">#0D29303F</color>
+    <color name="black">#ff000000</color>
 </resources>
